--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -43,6 +43,7 @@
 .nav-link:hover{
     font-weight: bold;
     color: #c92071;
+    transform: translateY(-5px);
     border-bottom: 3px solid #c92071;
 }
 
