--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,8 +1,34 @@
 footer {
     background-color: #1F1F1F;
     color: white;
+    padding-top: 50px;
 }
 
-ul li{
+ul{
+    margin-left: 0;
+    padding-left: 0;
+}
+
+h3{
+    padding-bottom: 16px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+li{
     list-style: none;
+    margin-bottom: 24px;
+    font-size: 16px;
+}
+
+.section-main{
+    width: 350px;
+}
+
+.section-information, .section-category{
+    width: 200px;
+}
+
+.section-contact{
+    width: 250px;
 }
