--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,17 @@
 *{
     font-family: "Inter";
 }
+
+.Page{
+    margin: 3vw;
+    border-radius: 50px;
+    text-align: center;
+    width: 90vw;
+    height: 200px;
+    line-height: 200px;
+    background-color: #c92071;
+    font-size: 48px;
+    font-weight: 600;
+    color: white;
+    box-shadow: 10px 10px 5px #00000040;
+}
