--- a/src/pages/Home/components/Carrosel/style.css
+++ b/src/pages/Home/components/Carrosel/style.css
@@ -1,3 +1,7 @@
+.carousel-item{
+    background-color: #f5f5f5;
+}
+
 .carousel-indicators {
     gap: 4px;
 }
@@ -13,13 +17,13 @@
     background-color: #c92071;
 }
 
-.carousel-inner .carousel-item{
-    height: 600px;
+.carousel-inner .carousel-item {
     width: 100vw;
 }
 
-.carousel-item .slide-left, .carousel-item.slide-right{
-    width: 50%;
+.carousel-item .slide-left,
+.carousel-item.slide-right {
+    width: 45%;
     display: block;
 }
 
@@ -61,6 +65,15 @@
 }
 
 .slide-left-btn {
-background-color: #c92071;
-border-radius: 10px;
+    background-color: #c92071;
+    border-radius: 10px;
+    width: 220px;
+    color: white;
+    font-weight: bold;
+    padding: 12px;
+    border: none;
+}
+
+.slide-left-btn:hover{
+    background-color: #951754;
 }
