ajustes de responsividade

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -26,8 +26,8 @@ li{
 }
 
 @media (max-width: 400px) {
-    .section-main p{
-        width: 250px;
+    .section-main{
+        width: 80vw;
     }
 }
 
