--- a/src/main.css
+++ b/src/main.css
@@ -3,6 +3,9 @@
 }
 
 .Page{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     text-align: center;
     width: 100%;
     height: 200px;
@@ -12,4 +15,10 @@
     font-weight: 600;
     color: white;
     border-bottom: 1px dashed #ffffff40;
+}
+
+@media (max-width: 600px){
+    .Page{
+        font-size: calc(48px - 4vw);
+    }
 }
