--- a/src/pages/Home/components/Carrosel/style.css
+++ b/src/pages/Home/components/Carrosel/style.css
@@ -1,6 +1,6 @@
 .carousel-item{
     background-color: #f5f5f5;
-    transition: transform 0.5s ease-in-out;
+    transition: transform 1s ease-in-out;
 }
 
 .carousel-indicators {
@@ -65,19 +65,21 @@
     letter-spacing: 0.75px;
 }
 
-@media (max-width: 700px){
+@media (max-width: 768px){
     .slide-left-subtitle{
-        width: 350px;
-        height: 200px;
+        width: 90vw;
+        height: auto;
     }
     .slide-left-text{
-        width: 300px;
-    }
-    .slide-left-btn{
-        margin-top: 160px;
+        width: 80vw;
+        height: auto;
     }
 
-    .slide-right img{
+    .slide-right{
+        width: 90vw;
+    }
+
+    /* .slide-right img{
         width: 220px;
         margin-top: 400px;
         position: relative;
@@ -86,7 +88,7 @@
 
     .slide-right img.circle{
         width: 50px;
-    }
+    } */
 }
 
 @media (max-width: 420px){
@@ -94,9 +96,9 @@
         width: 290px;
         height: 290px;
     }
-    .slide-right img{
+    /* .slide-right img{
         display: none;
-    }
+    } */
     .slide-left-btn{
         margin: 0px;
     }
@@ -116,4 +118,9 @@
 .slide-left-btn:hover{
     background-color: #951754;
     transition-duration: 300ms;
+}
+
+.img-main{
+    max-width: 100%;
+    height: auto;
 }
