--- a/src/pages/Home/components/ProdutosEmAlta/components/ProdutoCard/style.css
+++ b/src/pages/Home/components/ProdutosEmAlta/components/ProdutoCard/style.css
@@ -1,5 +1,33 @@
+.produto-alta-title {
+    color: var(--dark-gray-2, #474747);
+    font-feature-settings: "clig" off, "liga" off;
+
+    /* Text Large Bold */
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 38px; /* 158.333% */
+    letter-spacing: 0.75px;
+}
+
+.produto-alta-seta a{
+    color: var(--primary, #C92071);
+    font-feature-settings: 'clig' off, 'liga' off;
+    text-decoration: none;
+    /* Text Medium - Desktop */
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 34px; /* 188.889% */
+    letter-spacing: 0.75px;
+}
+
+
+
 .produto-alta-card {
-    min-width: 200px;
+    min-width: 250px;
     width: calc(25vw - 3 * 1em);
 }
 
@@ -9,7 +37,7 @@
     }
 }
 
-@media (max-width: 724px) {
+@media (max-width: 800px) {
     .produto-alta-card {
         width: calc(50vw - 3 * 1.5em);
     }
@@ -19,4 +47,112 @@
     .produto-alta-card {
         width: 100vw;
     }
+}
+
+.produto-alta-bg-desconto {
+    display: inline-flex;
+    padding: 5px 15px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 29px;
+    background: #e7ff86;
+    color: var(--dark-gray-2, #474747);
+    font-feature-settings: "clig" off, "liga" off;
+
+    /* Text X-Small Bold */
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 22px; /* 157.143% */
+    letter-spacing: 0.75px;
+}
+
+.produto-alta-bg-sem-desconto {
+    display: inline-flex;
+    padding: 5px 15px;
+    height: 25px;
+    width: 100%;
+}
+
+.produto-alta-bg {
+    width: 100%;
+    height: 350px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    background: #fff;
+    box-shadow: 6px 16px 30px 0px rgba(105, 98, 98, 0.05);
+}
+
+@media (min-width: 550px) {
+    .produto-alta-bg {
+        height: 300px;
+    }
+}
+
+.produto-alta-bg img {
+    width: 80%;
+    margin-left: 10%;
+}
+
+@media (min-width: 1400px) {
+    .produto-alta-bg img {
+        width: 65%;
+        margin-left: 17.5%;
+        margin-top: -4%;
+    }
+}
+
+.produto-alta-categoria {
+    color: var(--light-gray, #8f8f8f);
+    font-feature-settings: "clig" off, "liga" off;
+
+    /* Text Tinny Bold */
+    font-family: Inter;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px; /* 200% */
+    letter-spacing: 0.75px;
+}
+
+.produto-alta-nome {
+    color: var(--dark-gray-2, #474747);
+    font-feature-settings: "clig" off, "liga" off;
+
+    /* Text Large - Desktop */
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 38px; /* 158.333% */
+    letter-spacing: 0.75px;
+}
+
+.produto-alta-preco-antigo {
+    color: var(--light-gray, #8f8f8f);
+    text-decoration: line-through;
+    font-feature-settings: "clig" off, "liga" off;
+
+    /* Text Large - Desktop */
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 38px; /* 158.333% */
+    letter-spacing: 0.75px;
+}
+
+.produto-alta-preco-atual {
+    color: var(--dark-gray, #1f1f1f);
+    font-feature-settings: "clig" off, "liga" off;
+
+    /* Text Large Bold */
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 38px; /* 158.333% */
+    letter-spacing: 0.75px;
 }
