--- a/src/pages/Home/components/ProdutoEmDestaque/style.css
+++ b/src/pages/Home/components/ProdutoEmDestaque/style.css
@@ -1,9 +1,73 @@
-.prod-em-dest-direita-titulo{
-    color: red;
+.prod-em-dest-esquerda img{
+    position: absolute;
+    margin-top: 2.5em;
+    margin-left: -5%; 
+    width: 100%;
+    max-width: 600px;
 }
-.prod-em-dest-direita-nome{
-    color: red;
+
+.prod-em-dest-circle {
+    position: relative;
+    border-radius: 50%;
+    width: 350px;
+    height: 350px;
+    max-width: 600px;
+    background: linear-gradient(
+        180deg,
+        rgba(66, 0, 255, 0.25) -40.67%,
+        rgba(255, 255, 255, 0) 100%
+    );
 }
-.prod-em-dest-direita-texto{
-    color: red;
+
+@media (max-width:756px){
+    .produto-em-destaque{
+        flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 400px){
+    .prod-em-dest-circle {
+        width: 250px;
+        height: 250px;
+    }
+    .prod-em-dest-direta .prod-em-dest-direita-nome{
+        font-size: 42px;
+    }
+}
+
+.prod-em-dest-direita-titulo {
+    color: var(--primary, #c92071);
+    font-feature-settings: "clig" off, "liga" off;
+
+    /* Text X-Small Bold */
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 22px; /* 157.143% */
+    letter-spacing: 0.75px;
+}
+.prod-em-dest-direita-nome {
+    color: var(--dark-gray-2, #474747);
+    font-feature-settings: "clig" off, "liga" off;
+
+    /* H2 Title - Desktop Bold */
+    font-family: Inter;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 50px; /* 104.167% */
+    letter-spacing: 1px;
+}
+.prod-em-dest-direita-texto {
+    color: var(--dark-gray-2, #474747);
+    font-feature-settings: "clig" off, "liga" off;
+
+    /* Text Small - Desktop */
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px; /* 175% */
+    letter-spacing: 0.75px;
 }
