--- a/src/pages/Home/components/ProdutosEmAlta/components/ProdutoCard/style.css
+++ b/src/pages/Home/components/ProdutosEmAlta/components/ProdutoCard/style.css
@@ -24,8 +24,6 @@
     letter-spacing: 0.75px;
 }
 
-
-
 .produto-alta-card {
     min-width: 250px;
     width: calc(25vw - 3 * 1em);
@@ -45,7 +43,8 @@
 
 @media (max-width: 550px) {
     .produto-alta-card {
-        width: 100vw;
+        width: 80vw;
+        height: 300;
     }
 }
 
