criando pag produtos

--- a/src/components/Produtos/components/ProdutoCard/style.css
+++ b/src/components/Produtos/components/ProdutoCard/style.css
@@ -161,7 +161,7 @@
 }
 
 .produto-alta-card-placement.unload{
-    background-color: #a98094;
+    background-color: #b7b9bd;
     margin-bottom: 1.5em;
     border-radius: 6px;
 }
