--- a/src/components/Produtos/components/ProdutoCard/style.css
+++ b/src/components/Produtos/components/ProdutoCard/style.css
@@ -24,30 +24,6 @@
     letter-spacing: 0.75px;
 }
 
-.produto-alta-card {
-    min-width: 250px;
-    width: calc(25vw - 3 * 1em);
-}
-
-@media (max-width: 900px) {
-    .produto-alta-card {
-        width: calc(33vw - 3 * 1em);
-    }
-}
-
-@media (max-width: 800px) {
-    .produto-alta-card {
-        width: calc(50vw - 3 * 1.5em);
-    }
-}
-
-@media (max-width: 550px) {
-    .produto-alta-card {
-        width: 80vw;
-        height: 300;
-    }
-}
-
 .produto-alta-bg-desconto {
     display: inline-flex;
     padding: 5px 15px;
@@ -76,18 +52,10 @@
 }
 
 .produto-alta-bg {
-    width: 100%;
-    height: 350px;
     flex-shrink: 0;
     border-radius: 4px;
     background: #fff;
     box-shadow: 6px 16px 30px 0px rgba(105, 98, 98, 0.05);
-}
-
-@media (min-width: 550px) {
-    .produto-alta-bg {
-        height: 300px;
-    }
 }
 
 .produto-alta-bg img {
@@ -95,13 +63,13 @@
     margin-left: 10%;
 }
 
-@media (min-width: 1400px) {
+/* @media (min-width: 1400px) {
     .produto-alta-bg img {
         width: 65%;
         margin-left: 17.5%;
         margin-top: -4%;
     }
-}
+} */
 
 .produto-alta-categoria {
     color: var(--light-gray, #8f8f8f);
@@ -122,7 +90,7 @@
 
     /* Text Large - Desktop */
     font-family: Inter;
-    font-size: 24px;
+    font-size: 20px;
     font-style: normal;
     font-weight: 400;
     line-height: 38px; /* 158.333% */
@@ -136,7 +104,7 @@
 
     /* Text Large - Desktop */
     font-family: Inter;
-    font-size: 24px;
+    font-size: 22px;
     font-style: normal;
     font-weight: 400;
     line-height: 38px; /* 158.333% */
@@ -149,7 +117,7 @@
 
     /* Text Large Bold */
     font-family: Inter;
-    font-size: 24px;
+    font-size: 22px;
     font-style: normal;
     font-weight: 700;
     line-height: 38px; /* 158.333% */
